# kwin-effect-luminvert

./: CMakeLists.txt  PKGBUILD  README.md
src/: CMakeLists.txt  luminvert.cpp  luminvert.h  luminvert.qrc  luminvert_config.cpp  luminvert_config.h  main.cpp  metadata.json
src/shaders/: luminvert.frag  luminvert_core.frag
